# ai-bootcamp-12082025

./: README.md  feature-4.txt  sapient-ds-master.pptx  word-jumble-basic.py
day-01/git-and-github/: git_basics_trainer_worksheet.md  git_branch_deletion.md  git_connect_different_repo.md  git_github_multi_dev_workflow.md  git_github_workshop.md  git_github_workshop_upgraded.md  git_pull_vs_fetch.md  how_to_create_a_pull_request.md
day-01/python-overview/: mymodule.py  newproject.py  oop-experiments.ipynb  python_word_jumble_workshop.md  word-jumble-basic.py  word-jumble-functions.py  word-jumble-game-oop.py
day-02/async-python/: prime-with-async-cpu-bound.py  primes-with-async-io-bound.py  primes-without-async.py
day-02/pep/: introduction_to_pep.md
day-02/python-tools/: cli.py  poetry-transcript.txt  uv-transcript.txt  word_jumble_game_installation_setup_tools.md  word_jumble_game_poetry.md  word_jumble_game_setuptools_tutorial.md  word_jumble_game_uv.md
day-02/python-tools/word-jumble-game/: pyproject.toml
day-02/python-tools/wordjumble/: README.md  pyproject.toml  setup.py
day-02/python-tools/wordjumble/wordjumble/: __init__.py
day-02/python-tools/wordjumble/wordjumble.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
day-02/virtual-environments/: notes.txt
day-03/coroutines-threads/: asyncio_ex.py  comparison-multi.md  multi-tasking.md  threadsync.py  without_asyncio.ex.py
day-03/pandas-study/: numpy-basics.ipynb  sf-salaries-exercises.ipynb
day-03/visualization/: 01_matplotlib_cw.ipynb  02_seaborn_cw.ipynb
(+4 files in other folders)
